tests/baselines/reference/moduleAssignmentCompat1.errors.txt
tests/cases/compiler/moduleAssignmentCompat1.ts(9,8): error TS2304: Cannot find name 'A'.
tests/cases/compiler/moduleAssignmentCompat1.ts(10,8): error TS2304: Cannot find name 'B'.


==== tests/cases/compiler/moduleAssignmentCompat1.ts (2 errors) ====
    module A {
        export class C { }
    }
    module B {
        export class C { }
        class D { }
    }
    
    var a: A;
           ~
!!! error TS2304: Cannot find name 'A'.
    var b: B;
           ~
!!! error TS2304: Cannot find name 'B'.
    
    // no error
    a = b;
    b = a;
    
    